@@ -2,7 +2,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.22 2004/11/10 16:33:33 port001 Exp $
+# $Id: ChangeLog,v 1.23 2004/11/12 20:37:49 port001 Exp $
+
+12 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * Form fixes
+ * Bug fixes
+ * New feature to optimize MySQL tables
 
 10 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Added a timeout check to wait_threads()
